server_crash.txt
Traceback (most recent call last):
  File "E:\LETS COOK\Projects\Real_Time_Taskmanager\run_server.py", line 12, in <module>
    from backend.main import app
  File "E:\LETS COOK\Projects\Real_Time_Taskmanager\backend\main.py", line 3, in <module>
    from backend.routers import auth, admin, team_manager, tasks, users, chat, activity
  File "E:\LETS COOK\Projects\Real_Time_Taskmanager\backend\routers\__init__.py", line 1, in <module>
    from . import auth, admin, team_manager, tasks,users, chat
  File "E:\LETS COOK\Projects\Real_Time_Taskmanager\backend\routers\admin.py", line 246
    )
     ^
IndentationError: unindent does not match any outer indentation level
